--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,4 @@
 @import url(./pagination.css);
 @import url(./loader.css);
 @import url(./scroll-up.css);
-
-@import url(./all-home.css);
-@import url(./all-home.css);
+/* @import url(./all-home.css); */
