--- a/src/css/home-menu.css
+++ b/src/css/home-menu.css
@@ -1,8 +1,8 @@
 /** MOBILE CSS */
 .slider-container {
-    width: 100%;
-    height: 228px;
-    display: block;
+    margin-right: 20px;
+    margin-left:20px;
+    margin-bottom: 40px;
     overflow-y: auto;
 }
 
@@ -22,8 +22,8 @@
 #category-list {
     width: 307px;
     height: 228px;
-    /* margin: auto; */
     overflow-y: auto;
+    margin-top: 20px;
 }
 
 #category-list::-webkit-scrollbar {
@@ -44,13 +44,12 @@
     line-height: 112%;
     letter-spacing: -0.02em;
     text-transform: uppercase;
-    color: #4f2ee8;
+    color: #800080;
 }
 
 #category-list p {
     cursor: pointer;
     margin-bottom: 24px;
-    margin-right: 20px;
     font-weight: 400;
     font-size: 16px;
     line-height: 112%;
@@ -72,15 +71,18 @@
     /* Изменение при наведении на #category-list p:hover */
 }
 
-/* #p-list {
-    padding-right: 20px;
-} */
+#p-list {
+    margin-right: 20px;
+}
 
 /**=====  TABLET ===================================================================================  */
 @media screen and (min-width: 768px) {
     .slider-container {
-        width: 337px;
-        height: 472px;
+        margin-right: 32px;
+        margin-left:32px;
+        margin-bottom: 100px;
+        overflow-y: auto;
+        height: 100%;
     }
 
     #category-list {
@@ -101,7 +103,6 @@
 
     #category-list p {
         margin-bottom: 32px;
-        margin-right: 28px;
         font-size: 18px;
         line-height: 133%;
     }
@@ -109,12 +110,6 @@
 
 /**=====  FULL-SCR ===================================================================================  */
 @media screen and (min-width: 1440px) {
-    .slider-container {
-        margin-right: 40px;
-        margin-left: 24px;
-        margin-bottom: 86px;
-    }
-
     #category-list {
         width: 328px;
     }
