--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
                 </li>
 
                 <li class="nav-item"> 
-                    <a class="nav-link-shopping is-hidden" href="" label="Link to Shopping list">SHOPPING LIST 
+                    <a class="nav-link-shopping is-hidden" href="./shopping-list.html" label="Link to Shopping list">SHOPPING LIST 
                         <svg width="20" height="20"> 
                             <use href="./img/symbol-defs.svg#icon-shopping-bag"></use>
                         </svg>
@@ -67,7 +67,7 @@
                 </li>
 
                 <li class="header-modal-item">
-                    <a href="" class="header-modal-link header-modal-link-shopping">SHOPPING LIST
+                    <a href="./shopping-list.html" class="header-modal-link header-modal-link-shopping">SHOPPING LIST
                         <svg width="20" height="20"> 
                             <use href="./img/symbol-defs.svg#icon-shopping-bag"></use>
                         </svg>
