--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -2,7 +2,7 @@
         <div class="modal about-book-window" data-modal-window=""> 
           <button class="about-book-close-btn" data-modal-close="" aria-label="Close modal">
             <svg class="about-book-close-btn-icon" width="24" height="24"> 
-            <use href="./img/symbol-defs.svg#icon-close" viewBox="0 0 32 32">
+            <use href="./img/symbol-defs.svg#icon-x" viewBox="0 0 32 32">
                 "></use> </svg>
              </button>
         <div class="about-book-render-book"> 
@@ -24,9 +24,8 @@
         </a> </li> 
         </ul>
         </div>
-         </div> 
-         <div class="about-book-add-button">
-            <button type="button" class="disabled modal-btn-add-to-shopinglist" id="add" aria-label="Add card to shopping list" disabled="">Add to shopping list</button> 
+        </div>
+        <div class="about-book-add-button">
+            <button type="button" class="modal-btn-add-to-shopinglist" id="add" aria-label="Add card to shopping list">Add to shopping list</button> 
         <p class="under-button-text">Congratulations! You have added the book to the shopping list. To delete, press the button “Remove from the shopping list”.</p>
          </div>
-       
