--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,11 +1,7 @@
-@import url(./base.css);
+@import url(./theme-light-roots.css);
 @import url(./header.css);
 @import url(./home-books.css);
 @import url(./home-menu.css);
 @import url(./modal-window.css);
 @import url(./home-ukraine.css);
 @import url(./shopping-list.css);
-@import url(./pagination.css);
-@import url(./loader.css);
-@import url(./scroll-up.css);
-/* @import url(./all-home.css); */
