--- a/src/partials/home-ukraine.html
+++ b/src/partials/home-ukraine.html
@@ -3,7 +3,7 @@
         <div class="support-title">
             <h3 class="support-header">Support Ukraine</h3>
             <svg width="20" height="32" class="support-icon">
-                <use href="../img/symbol-defs.svg#icon-UA_Herb"></use>
+                <use href="./img/symbol-defs.svg#icon-UA_Herb"></use>
             </svg>
         </div>
         <div class="swiper">
@@ -14,7 +14,7 @@
         <button type="button" class="support-btn swiper-btn-next" aria-label="Scroll down">
             <span>Scroll Down</span>
             <svg class="support-btn-icon">
-                <use href="../img/symbol-defs.svg#icon-support-down"></use>
+                <use href="./img/symbol-defs.svg#icon-support-down"></use>
             </svg>
         </button>
     </div>
